systemd (210-1) UNRELEASED; urgency=medium

  * New upstream release v210.
    - Replace v208-stable patch series with v210-stable patch series.
    - Update Debian patches to apply on top of v210-stable.
  * Add python-lxml to Build-Depends.

 -- Jon Severinsson <jon@severinsson.net>  Sat, 28 Jun 2014 16:00:00 +0200

systemd (208-6) UNRELEASED; urgency=medium

  * Add v208-stable patch series.
    - Update Debian patches to apply on top of v208-stable.
    - Move new manpages to libsystemd-*-dev as appropriate.
  * Remove pre-generated rules and unit files in debian/rules clean target.

 -- Jon Severinsson <jon@severinsson.net>  Sat, 28 Jun 2014 16:00:00 +0200

systemd (208-5) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 13:41:32 +0200

systemd (208-4) experimental; urgency=medium

  * Merge changes from unstable branch.
  * Drop alternative dependency on systemd-shim in libpam-systemd. The
    systemd-shim package no longer provides an environment to run
    systemd-logind standalone. See #752939 for further details.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 01:22:11 +0200

systemd (208-3) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Wed, 25 Jun 2014 11:29:07 +0200

systemd (208-2) experimental; urgency=medium

  [ Sjoerd Simons ]
  * Don't stop a running user manager from garbage collecting the users. Fixes
    long shutdown times when using a systemd user session

  [ Michael Stapelberg ]
  * Fix bug-script: “systemctl dump” is now “systemd-analyze dump”
    (Closes: #748311)

  [ Michael Biebl ]
  * Merge changes from unstable branch.
  * Cherry-pick upstream fixes to make sd_session_get_vt() actually work.

 -- Michael Biebl <biebl@debian.org>  Tue, 24 Jun 2014 17:45:26 +0200

systemd (208-1) experimental; urgency=medium

  [ Michael Biebl ]
  * New upstream release. (Closes: #729566)