@@ -1,24 +1,1 @@
-usr/lib/*/libsystemd-daemon.so
 usr/lib/*/pkgconfig/libsystemd-daemon.pc
-usr/include/systemd/sd-daemon.h
-usr/include/systemd/sd-shutdown.h
-usr/share/man/man3/sd-daemon.3
-usr/share/man/man3/SD_EMERG.3
-usr/share/man/man3/SD_ALERT.3
-usr/share/man/man3/SD_CRIT.3
-usr/share/man/man3/SD_ERR.3
-usr/share/man/man3/SD_WARNING.3
-usr/share/man/man3/SD_NOTICE.3
-usr/share/man/man3/SD_INFO.3
-usr/share/man/man3/SD_DEBUG.3
-usr/share/man/man3/SD_LISTEN_FDS_START.3
-usr/share/man/man3/sd_booted.3
-usr/share/man/man3/sd_notify.3
-usr/share/man/man3/sd_notifyf.3
-usr/share/man/man3/sd_listen_fds.3
-usr/share/man/man3/sd_is_fifo.3
-usr/share/man/man3/sd_is_socket.3
-usr/share/man/man3/sd_is_socket_inet.3
-usr/share/man/man3/sd_is_socket_unix.3
-usr/share/man/man3/sd_is_special.3
-usr/share/man/man3/sd_is_mq.3
